--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,18 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.15
   easy_splash_screen: ^1.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^3.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.1
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
 
 flutter:
   uses-material-design: true
